k8s/prometheus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-database-deployment
  labels:
    app: prometheus-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-database
  template:
    metadata:
      labels:
        app: prometheus-database
    spec:
      volumes:
        - name: prometheus-database-volume
          persistentVolumeClaim:
            claimName: prometheus-database-claim
        - name: config
          configMap:
            name: config
      containers:
        - name: prometheus-database
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-database-volume
              mountPath: /prometheus
            - name: config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-database-service
spec:
  selector:
    app: prometheus-database
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
