k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - notredditapi.switzerlandnorth.cloudapp.azure.com
      secretName: tls-secret-api
  rules:
  - host: notredditapi.switzerlandnorth.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-api-service
            port:
              number: 8080
  ingressClassName: api-nginx
