k8s/ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - notredditui.switzerlandnorth.cloudapp.azure.com
      secretName: tls-secret
  rules:
  - host: notredditui.switzerlandnorth.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              number: 3000
  ingressClassName: nginx
